 * Parameters can now be controlled via Channel Aftertouch (Channel Pressure).
 * With the help of Patrik Ehringer (ZonderP), program and bank management is
   implemented, and presets are accessible via the host application, without
   having to browse the file system.
 * Bugfix: the VST3 plugin will now process all controller changes within a
   block, not just the last one

v1.4.0 (2023-05-20)
 * MIDI Learn: assign this special controller to a parameter, then move a
   fader, knob, or the modulation wheel, etc. on your MIDI keyboard, and the
   plugin will automatically assign that controller to the parameter
 * Cutoff frequency of filters can now use logarithmic scale
 * LFO frequency and Echo time can now be synchronized to the host's tempo
 * New preset: sandstorm.js80p
 * Bugfix: include CC 6 (Data Entry) in controller selection, and remove CC 84
   (Portamento), since the latter is not supposed to represent a continuous
   controller
 * Bugfix: fix the typo in the name of the Distortion effect

v1.3.0 (2023-05-13)
 * The GUI will now indicate clearly when a parameter is fully controlled by
   an envelope
 * Bugfix: eliminate noise which occurs when FL Studio is running the plugin
   with variable buffer sizes and the Echo or Reverb effects are turned on
 * Bugfix: Reverb and Echo should not consume any CPU when Wet Volume is 0% and
   Dry Volume is 100%

v1.2.0 (2023-05-07)
 * Respond to ALL_NOTES_OFF and ALL_SOUNDS_OFF MIDI messages
 * Get rid of obtrusive tooltips on Windows, show long name of knobs in the
   top right corner of the window instead
 * New preset: chariots.js80p
 * Bugfix: make sure that all text files in the Windows distribution use
   Windows-style line breaks
 * Bugfix: fix libcairo2 crash when the plugin's window is closed and opened
   again repeatedly in quick succession on Linux
 * Bugfix: fix crash in the FST plugin when running in Ardour (and possibly
   other hosts) which sends and effEditIdle message before sending the first